// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphql-loader document-output 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fail-invalid-document 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fail-invalid-field 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fail-invalid-schema-path 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fail-missing-fragment 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fail-missing-schema-path 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader filter-unused-fragments 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fragments 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader fragments-common-duplicates 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader issue-1-import-from-fragment 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader minify 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;

exports[`graphql-loader simple 1`] = `
Array [
  ".
Module build failed: Error: Cannot find module 'apollo-codegen' from 'codegen.ts'",
]
`;

exports[`graphql-loader two-loaders 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)
 @ . 2:5-33",
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)
 @ . 3:5-33",
]
`;

exports[`graphql-loader validator 1`] = `
Array [
  ".
Module build failed: LoaderRunnerError: Module 'C:\\\\Users\\\\user\\\\Workspace\\\\graphql-loader\\\\src\\\\loader.ts' is not a loader (must have normal or pitch function)",
]
`;
